--- a/index.html
+++ b/index.html
@@ -2,16 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-  <title>Contact Form Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Свабдя!</title>
 </head>
 
 <body>
-<!-- START HERE -->
- 
+   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+   
+ <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="alehkulahin@gmail.com"
+   action="https://script.google.com/macros/s/AKfycbwMxYDrufp73bKdU8gMvxFDdHRuzcR4IKQUB33B7GqwyfyZS04/exec">
+    <!-- change the form action to your script url -->
+
+    <fieldset class="pure-group">
+      <label for="name">Имя: </label>
+      <input id="name" name="name" />
+    </fieldset>
+
+    <fieldset class="pure-group">
+      <label for="message">Message: </label>
+      <textarea id="message" name="message" rows="10"
+      placeholder="Tell us what's on your mind..."></textarea>
+    </fieldset>
+
+    <button class="button-success pure-button button-xlarge">
+      <i class="fa fa-paper-plane"></i>&nbsp;Send
+    </button>
+
+  </form>
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
   <div>
-    <h2><em>Thanks</em> for contacting us!
+   <h2><em>Thanks</em> for contacting us!
       We will get back to you soon!</h2>
   </div>
 
